# rust-expm

./: Cargo.toml
src/: lib.rs
src/factorial/: consts.rs  factorial.rs  gamma.rs  mod.rs
