[package]
name = "expm"
version = "0.1.2"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-expm"
description = "An implementation of the expm matrix exponential function by Higham and Al-Mohy, 2009"
readme = "README.md"

categories = ["science"]
keywords = ["matrix", "exponential", "linalg", "ndarray", "expm"]

[dependencies]
alga = "0.9.2"
blas-traits = {git="https://github.com/hmunozb/blas-traits"}
cblas = "0.2"
condest = {git="https://github.com/hmunozb/rust-condest", branch="generic-scalar"}
lapacke = "0.2"
ndarray = "0.13"
num-traits = "0.2.8"
statrs = "0.10"


[dev-dependencies]
approx = "0.3.1"
num-complex = "0.2.3"
#openblas-src = "0.7"
openblas-src = {version="0.7", default-features=false, features=["system"]}
#cblas-sys = "0.1.4"
lapacke-sys = "0.1.4"
