[package]
name = "expm"
version = "0.2.0"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-expm"
description = "An implementation of the expm matrix exponential function by Higham and Al-Mohy, 2009"
readme = "README.md"

categories = ["science"]
keywords = ["matrix", "exponential", "linalg", "ndarray", "expm"]

[dependencies]
approx="0.5"
lapack-traits = { version="0.3", features=["simba"] }
cblas = "0.4"
condest = {git="https://github.com/hmunozb/rust-condest", branch="generic-scalar"}
lapacke = "0.5"
ndarray = "0.15"
num-traits = "0.2"
simba="0.5"


[dev-dependencies]
simba="0.5"
approx = "0.5"
num-complex = "0.4"
openblas-src = {version="0.9", default-features=false, features=["system"]}
